--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 matrix:
   include:
     - python: 3.6
-      env: FLASK=1.0.2 PYLINT=2.3 PYMYSQL=0.9.3
+      env: FLASK=1.0.2 PYLINT=2.3 PYMYSQL=0.9.3 PYTEST=4.3
 os: linux
 
 before_install:
@@ -17,9 +17,10 @@ before_install:
   - conda info -a
 
 install:
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION flask=$FLASK pylint=$PYLINT pymysql=$PYMYSQL
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION flask=$FLASK pylint=$PYLINT pymysql=$PYMYSQL pytest=$PYTEST
   - source activate test-environment
   - python setup.py install
 
 script:
   - py.test
+  - pylint
