--- a/environment.yml
+++ b/environment.yml
@@ -4,6 +4,8 @@ channels:
 dependencies:
   - asn1crypto=0.24.0=py36_0
   - astroid=2.2.5=py36_0
+  - atomicwrites=1.3.0=py36_1
+  - attrs=19.1.0=py36_1
   - ca-certificates=2019.1.23=0
   - certifi=2019.3.9=py36_0
   - cffi=1.12.2=py36hb5b8e2f_1
@@ -21,12 +23,16 @@ dependencies:
   - libffi=3.2.1=h475c297_4
   - markupsafe=1.1.1=py36h1de35cc_0
   - mccabe=0.6.1=py36_1
+  - more-itertools=6.0.0=py36_0
   - ncurses=6.1=h0a44026_1
   - openssl=1.1.1b=h1de35cc_1
   - pip=19.0.3=py36_0
+  - pluggy=0.9.0=py36_0
+  - py=1.8.0=py36_0
   - pycparser=2.19=py36_0
   - pylint=2.3.1=py36_0
   - pymysql=0.9.3=py36_0
+  - pytest=4.3.1=py36_0
   - python=3.6.8=haf84260_0
   - readline=7.0=h1de35cc_5
   - setuptools=40.8.0=py36_0
