--- a/environment.yml
+++ b/environment.yml
@@ -2,48 +2,47 @@ name: IO2019
 channels:
   - defaults
 dependencies:
-  - asn1crypto=0.24.0=py36_0
-  - astroid=2.2.5=py36_0
-  - atomicwrites=1.3.0=py36_1
-  - attrs=19.1.0=py36_1
-  - ca-certificates=2019.1.23=0
-  - certifi=2019.3.9=py36_0
-  - cffi=1.12.2=py36hb5b8e2f_1
-  - click=7.0=py36_0
-  - cryptography=2.6.1=py36ha12b0ac_0
-  - flask=1.0.2=py36_1
-  - idna=2.8=py36_0
-  - isort=4.3.16=py36_0
-  - itsdangerous=1.1.0=py36_0
-  - jinja2=2.10=py36_0
-  - lazy-object-proxy=1.3.1=py36h1de35cc_2
-  - libcxx=4.0.1=hcfea43d_1
-  - libcxxabi=4.0.1=hcfea43d_1
-  - libedit=3.1.20181209=hb402a30_0
-  - libffi=3.2.1=h475c297_4
-  - markupsafe=1.1.1=py36h1de35cc_0
-  - mccabe=0.6.1=py36_1
-  - more-itertools=6.0.0=py36_0
-  - ncurses=6.1=h0a44026_1
-  - openssl=1.1.1b=h1de35cc_1
-  - pip=19.0.3=py36_0
-  - pluggy=0.9.0=py36_0
-  - py=1.8.0=py36_0
-  - pycparser=2.19=py36_0
-  - pylint=2.3.1=py36_0
-  - pymysql=0.9.3=py36_0
-  - pytest=4.3.1=py36_0
-  - python=3.6.8=haf84260_0
-  - readline=7.0=h1de35cc_5
-  - setuptools=40.8.0=py36_0
-  - six=1.12.0=py36_0
-  - sqlite=3.27.2=ha441bb4_0
-  - tk=8.6.8=ha441bb4_0
-  - typed-ast=1.3.1=py36h1de35cc_0
-  - werkzeug=0.14.1=py36_0
-  - wheel=0.33.1=py36_0
-  - wrapt=1.11.1=py36h1de35cc_0
-  - xz=5.2.4=h1de35cc_4
-  - zlib=1.2.11=h1de35cc_3
-prefix: /Users/revan/miniconda3/envs/IO2019
+  - asn1crypto=0.24.0
+  - astroid=2.2.5
+  - atomicwrites=1.3.0
+  - attrs=19.1.0
+  - ca-certificates=2019.1.23
+  - certifi=2019.3.9
+  - cffi=1.12.2
+  - click=7.0
+  - cryptography=2.6.1
+  - flask=1.0.2
+  - idna=2.8
+  - isort=4.3.16
+  - itsdangerous=1.1.0
+  - jinja2=2.10
+  - lazy-object-proxy=1.3.1
+  - libcxx=4.0.1
+  - libcxxabi=4.0.1
+  - libedit=3.1.20181209
+  - libffi=3.2.1
+  - markupsafe=1.1.1
+  - mccabe=0.6.1
+  - more-itertools=6.0.0
+  - ncurses=6.1
+  - openssl=1.1.1b
+  - pip=19.0.3
+  - pluggy=0.9.0
+  - py=1.8.0
+  - pycparser=2.19
+  - pylint=2.3.1
+  - pymysql=0.9.3
+  - pytest=4.3.1
+  - python=3.6.8
+  - readline=7.0
+  - setuptools=40.8.0
+  - six=1.12.0
+  - sqlite=3.27.2
+  - tk=8.6.8
+  - typed-ast=1.3.1
+  - werkzeug=0.14.1
+  - wheel=0.33.1
+  - wrapt=1.11.1
+  - xz=5.2.4
+  - zlib=1.2.11
 
