--- a/environment.yml
+++ b/environment.yml
@@ -1,10 +1,12 @@
 name: IO2019-server
 channels:
   - defaults
+  - conda-forge
 dependencies:
   - flask=1.0.2
-  - jinja2=2.10
-  - pylint=2.3.1
+  - jinja2>=2.10
+  - pylint>=2.3.1
   - pymysql=0.9.3
   - pytest=4.3.1
   - python=3.6.8
+  - black>=19.3b0  
