--- a/environment.yml
+++ b/environment.yml
@@ -10,5 +10,5 @@ dependencies:
   - python=3.6.8
   - black>=19.3b0  
   - sqlite>=3.27
-  - flask_appbuilder>1.3.0
-  - sqlalchemy>=1.2.18
+  - flask-sqlalchemy>=2.3.1
+  - flask-migrate>=2.0
