--- a/environment.yml
+++ b/environment.yml
@@ -13,4 +13,5 @@ dependencies:
   - flask-sqlalchemy>=2.3.1
   - flask-cors>=3.0
   - sqlalchemy>=1.3
+  - flask-login
   - gunicorn # for app deployment
