--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,10 @@ certifi==2019.3.9
 Click==7.0
 Flask==1.0.2
 Flask-Cors==3.0.7
+Flask-Login==0.4.1
 Flask-Migrate==2.4.0
 Flask-SQLAlchemy==2.3.2
+gunicorn==19.9.0
 isort==4.3.16
 itsdangerous==1.1.0
 Jinja2==2.10.1
@@ -21,13 +23,13 @@ more-itertools==6.0.0
 pluggy==0.9.0
 py==1.8.0
 pylint==2.3.1
-pytest==4.4.1
+pytest==4.5.0
 python-dateutil==2.8.0
 python-editor==1.0.4
 six==1.12.0
 SQLAlchemy==1.3.3
 toml==0.10.0
 typed-ast==1.3.1
+wcwidth==0.1.7
 Werkzeug==0.14.1
 wrapt==1.11.1
-gunicorn
